<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="417dp"
        android:layout_height="208dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profileback" />

    <!-- LinearLayout for contact information -->
    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="143dp"
        android:layout_height="137dp"
        android:layout_marginTop="140dp"
        android:scaleType="fitXY"
        android:src="@drawable/mee_modified"
        app:circularflow_angles="230"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="320dp"
        android:text="@string/prof_name"
        android:textColor="@color/accent_color"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


    <!-- LinearLayout for buttons -->
    <LinearLayout
        android:id="@+id/contact_info_layout"
        android:layout_width="352dp"
        android:layout_height="207dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_name">

        <TextView
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/prof_email"
            android:textColor="@color/accent_color"
            android:textSize="20sp" />

        <TextView
            android:layout_width="287dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/prof_email_ex"
            android:textColor="@color/accent_color"
            android:textSize="20sp" />

        <TextView
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/prof_mobile"
            android:textColor="@color/accent_color"
            android:textSize="20sp" />

        <TextView
            android:layout_width="276dp"
            android:layout_height="41dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/prof_mobile_ex"
            android:textColor="@color/accent_color"
            android:textSize="20sp" />

        <TextView
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/prof_birth"
            android:textColor="@color/accent_color"
            android:textSize="20sp" />

        <TextView
            android:layout_width="273dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/prof_birth_ex"
            android:textColor="@color/accent_color"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="377dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_info_layout">

        <Button
            android:id="@+id/delete_account_button"
            android:layout_width="129dp"
            android:layout_height="38dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#FF0000"
            android:text="@string/prof_del"
            android:textColor="@color/accent_color" />

        <Button
            android:id="@+id/edit_account_button"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#008000"
            android:text="@string/Prof_edit"
            android:textColor="@color/accent_color" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:backgroundTint="#0000FF"
            android:text="@string/prof_out"
            android:textColor="@color/accent_color" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:background="#C4FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav" />

</androidx.constraintlayout.widget.ConstraintLayout>
